--- a/refs.bib
+++ b/refs.bib
@@ -30,3 +30,81 @@ publisher = {The Eurographics Association and Blackwell Publishing Ltd.},
 ISSN = {1467-8659},
 DOI = {10.1111/j.1467-8659.2011.01920.x}
 }
+
+@article {Koudelakova2013,
+author = {Koudelakova, Tana and Chaloupkova, Radka and Brezovsky, Jan and Prokop, Zbynek and Sebestova, Eva 
+and Hesseler, Martin and Khabiri, Morteza and Plevaka, Maryia and Kulik, Daryna and Kuta Smatanova, Ivana 
+and Rezacova, Pavlina and Ettrich, Rudiger and Bornscheuer, Uwe T. and Damborsky, Jiri},
+title = {Engineering Enzyme Stability and Resistance to an Organic Cosolvent by Modification of Residues in the Access Tunnel},
+journal = {Angewandte Chemie International Edition},
+volume = {52},
+number = {7},
+publisher = {WILEY-VCH Verlag},
+issn = {1521-3773},
+year = {2013},
+}
+
+@article{Chovancova2012,
+  author = {Chovancova, Eva and Pavelka, Antonin and Benes, Petr and Strnad, Ondrej and Brezovsky, Jan and Kozlikova, Barbora and Gora, Artur and Sustr, Vilem and Klvana, Martin and Medek, Petr and Biedermannova, Lada and Sochor, Jiri and Damborský, Jiri},
+  journal = {PLoS Computational Biology},
+  keywords = {dblp},
+  number = 10,
+  title = {{CAVER} 3.0: A Tool for the Analysis of Transport Pathways in Dynamic Protein Structures.},
+  volume = 8,
+  year = 2012,
+}
+
+@article{Sehnal2013,
+year={2013},
+journal={Journal of Cheminformatics},
+volume={5},
+number={1},
+title={{MOLE} 2.0: advanced approach for analysis of biomacromolecular channels},
+publisher={BioMed Central},
+author={Sehnal, David and Svobodova Varekova, Radka and Berka, Karel and Pravda, Lukas and Navratilova, Veronika and Banas, Pavel and Ionescu, Crina-Maria and Otyepka, Michal and Koca, Jaroslav},
+}
+
+@article {Yaffe2008,
+author = {Yaffe, Eitan and Fishelovitch, Dan and Wolfson, Haim J. and Halperin, Dan and Nussinov, Ruth},
+title = {{MolAxis}: Efficient and accurate identification of channels in macromolecules},
+journal = {Proteins: Structure, Function, and Bioinformatics},
+volume = {73},
+number = {1},
+publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+issn = {1097-0134},
+year = {2008},
+}
+
+@Article{Devaurs,
+   Author="Devaurs, D.  and Bouard, L.  and Vaisset, M.  and Zanon, C.  and Al-Bluwi, I.  and Iehl, R.  and Simeon, T.  and Cortes, J. ",
+   Title="{{M}o{M}{A}-{L}ig{P}ath: a web server to simulate protein-ligand unbinding}",
+   Journal="Nucleic Acids Res.",
+   Year="2013",
+   Volume="41",
+   Number="Web Server issue",
+   Pages="297--302",
+   Month="Jul"
+}
+
+@Article{Isralewitz,
+   Author="Isralewitz, B.  and Gao, M.  and Schulten, K. ",
+   Title="{{S}teered molecular dynamics and mechanical functions of proteins}",
+   Journal="Curr. Opin. Struct. Biol.",
+   Year="2001",
+   Volume="11",
+   Number="2",
+   Pages="224--230",
+   Month="Apr"
+}
+
+@Article{Ludemann,
+   Author="Ludemann, S. K.  and Lounnas, V.  and Wade, R. C. ",
+   Title="{{H}ow do substrates enter and products exit the buried active site of cytochrome {P}450cam? 1. {R}andom expulsion molecular dynamics investigation of ligand access channels and mechanisms}",
+   Journal="J. Mol. Biol.",
+   Year="2000",
+   Volume="303",
+   Number="5",
+   Pages="797--811",
+   Month="Nov"
+}
+
