--- a/refs.bib
+++ b/refs.bib
@@ -45,7 +45,7 @@ year = {2013},
 }
 
 @article{Chovancova2012,
-  author = {Chovancova, Eva and Pavelka, Antonin and Benes, Petr and Strnad, Ondrej and Brezovsky, Jan and Kozlikova, Barbora and Gora, Artur and Sustr, Vilem and Klvana, Martin and Medek, Petr and Biedermannova, Lada and Sochor, Jiri and Damborský, Jiri},
+  author = {Chovancova, Eva and Pavelka, Antonin and Benes, Petr and Strnad, Ondrej and Brezovsky, Jan and Kozlikova, Barbora and Gora, Artur and Sustr, Vilem and Klvana, Martin and Medek, Petr and Biedermannova, Lada and Sochor, Jiri and Damborsky, Jiri},
   journal = {PLoS Computational Biology},
   keywords = {dblp},
   number = 10,
