Related work Bidmon

--- a/refs.bib
+++ b/refs.bib
@@ -30,3 +30,13 @@ publisher = {The Eurographics Association and Blackwell Publishing Ltd.},
 ISSN = {1467-8659},
 DOI = {10.1111/j.1467-8659.2011.01920.x}
 }
+
+@Book{andrienko2013,
+ author = {Andrienko, Gennady and Andrienko, Natalia and Bak, Peter and Keim, 
+Daniel and Wrobel, Stefan},
+ title = {Visual Analytics of Movement},
+ publisher = {Springer},
+ year = {2013},
+ address = {Heidelberg},
+ isbn = {9783642375835}
+ }
