problem definition and input data

--- a/refs.bib
+++ b/refs.bib
@@ -117,3 +117,15 @@ year = {2008},
   ISBN = {3642375820}
 }
 
+@article{Kozlikova2014,
+    author = {Kozlikova, Barbora and Sebestova, Eva and Sustr, Vilem and Brezovsky, Jan and Strnad, Ondrej and Daniel, Lukas and Bednar, David and Pavelka, Antonin and Manak, Martin and Bezdeka, Martin and Benes, Petr and Kotry, Matus and Gora, Artur and Damborsky, Jiri and Sochor, Jiri},
+    issn = {1460-2059},
+    journal = {Bioinformatics},
+    number = {18},
+    pages = {2684--2685},
+    publisher = {Oxford University Press},
+    title = {{CAVER Analyst 1.0: graphic tool for interactive visualization and analysis of tunnels and channels in protein structures}},
+    volume = {30},
+    year = {2014}
+}
+
