related work in progress

--- a/refs.bib
+++ b/refs.bib
@@ -129,3 +129,22 @@ year = {2008},
     year = {2014}
 }
 
+@article {Luboschik2012,
+	title = {Heterogeneity-based guidance for exploring multiscale data in Systems Biology},
+	journal = {Proceedings of the IEEE Symposium on Biological Data Visualization (BioVis{\textquoteright}12)},
+	year = {2012},
+	address = {Seattle, USA},
+	keywords = {[Project Phase 2] Developing new visual analysis methods to be integrated into simulation processes focusing on the exploration of cell biological systems in space and time},
+	author = {M. Luboschik and C. Maus and H.-J. Schulz and H. Schumann and A. Uhrmacher},
+}
+
+@article{Lindow2013,
+  author = {Lindow, Norbert and Baum, Daniel and Bondar, Ana-Nicoleta and Hege, Hans-Christian},
+  journal = {BMC Bioinformatics},
+  keywords = {dblp},
+  number = {S-19},
+  pages = {S5},
+  title = {Exploring cavity dynamics in biomolecular systems.},
+  volume = 14,
+  year = 2013
+}
