--- a/refs.bib
+++ b/refs.bib
@@ -148,3 +148,17 @@ year = {2008},
   volume = 14,
   year = 2013
 }
+
+@article{Vrotsou2015,
+  author    = {Vrotsou, Katerina and Janetzko, Halldor and Navarra, Carlo and Fuchs, Georg and Spretke, David  and Mansmann, Florian and Andrienko, Natalia and Andrienko, Gennady},
+  title     = {SimpliFly: {A} Methodology for Simplification and Thematic Enhancement of Trajectories},
+  journal   = {{IEEE} Trans. Vis. Comput. Graph.},
+  volume    = {21},
+  number    = {1},
+  pages     = {107--121},
+  year      = {2015},
+  url       = {http://dx.doi.org/10.1109/TVCG.2014.2337333},
+  doi       = {10.1109/TVCG.2014.2337333},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/tvcg/VrotsouJNFSMAA15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
