--- a/refs.bib
+++ b/refs.bib
@@ -162,3 +162,15 @@ year = {2008},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/tvcg/VrotsouJNFSMAA15},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@article{Richards,
+    author = {Richards, F. M.},
+    issn = {0084-6589},
+    journal = {Annual Review of Biophysics and Bioengineering},
+    number = {1},
+    pages = {151--176},
+    priority = {2},
+    title = {{Areas, Volumes, Packing, and Protein Structure}},
+    volume = {6},
+    year = {1977}
+}
