--- a/refs.bib
+++ b/refs.bib
@@ -49,7 +49,7 @@ year = {2013},
   journal = {PLoS Computational Biology},
   keywords = {dblp},
   number = 10,
-  title = {{CAVER} 3.0: A Tool for the Analysis of Transport Pathways in Dynamic Protein Structures.},
+  title = {CAVER 3.0: A Tool for the Analysis of Transport Pathways in Dynamic Protein Structures.},
   volume = 8,
   year = 2012,
 }
@@ -59,26 +59,49 @@ year={2013},
 journal={Journal of Cheminformatics},
 volume={5},
 number={1},
-title={{MOLE} 2.0: advanced approach for analysis of biomacromolecular channels},
+title={MOLE 2.0: advanced approach for analysis of biomacromolecular channels},
 publisher={BioMed Central},
 author={Sehnal, David and Svobodova Varekova, Radka and Berka, Karel and Pravda, Lukas and Navratilova, Veronika and Banas, Pavel and Ionescu, Crina-Maria and Otyepka, Michal and Koca, Jaroslav},
 }
 
 @article {Yaffe2008,
 author = {Yaffe, Eitan and Fishelovitch, Dan and Wolfson, Haim J. and Halperin, Dan and Nussinov, Ruth},
-title = {{MolAxis}: Efficient and accurate identification of channels in macromolecules},
+title = {MolAxis: Efficient and accurate identification of channels in macromolecules},
 journal = {Proteins: Structure, Function, and Bioinformatics},
 volume = {73},
 number = {1},
 publisher = {Wiley Subscription Services, Inc., A Wiley Company},
 issn = {1097-0134},
-year = {2008},
+year = {2008}
+}
+
+@ARTICLE{parulek2013, 
+ author={Julius Parulek and Cagatay Turkay and Nathalie Reuter and Ivan Viola}, 
+ journal={BMC Bioinformatics}, 
+ title={Visual cavity analysis in molecular simulations}, 
+ volume = {14},
+ number = {Suppl 19},
+ pages = {S4},
+ url = {http://www.biomedcentral.com/1471-2105/14/S19/S4},
+ doi = {10.1186/1471-2105-14-S19-S4},
+ issn = {1471-2105},
+ month = {Nov.},
+ year={2013}
+}
+
+@inproceedings{parulek2012,
+  title={Implicit surfaces for interactive graph based cavity analysis of molecular simulations},
+  author={Parulek, Julius and Turkay, Cagatay and Reuter, Nathalie and Viola, Ivan},
+  booktitle={Biological Data Visualization (BioVis), 2012 IEEE Symposium on},
+  pages={115--122},
+  year={2012},
+  organization={IEEE}
 }
 
 @Article{Devaurs,
-   Author="Devaurs, D.  and Bouard, L.  and Vaisset, M.  and Zanon, C.  and Al-Bluwi, I.  and Iehl, R.  and Simeon, T.  and Cortes, J. ",
-   Title="{{M}o{M}{A}-{L}ig{P}ath: a web server to simulate protein-ligand unbinding}",
-   Journal="Nucleic Acids Res.",
+   Author={Devaurs, D.  and Bouard, L.  and Vaisset, M.  and Zanon, C.  and Al-Bluwi, I.  and Iehl, R.  and Simeon, T.  and Cortes, J. },
+   Title={MoMA-LigPath: a web server to simulate protein-ligand unbinding},
+   Journal={Nucleic Acids Res.},
    Year="2013",
    Volume="41",
    Number="Web Server issue",
@@ -88,7 +111,7 @@ year = {2008},
 
 @Article{Isralewitz,
    Author="Isralewitz, B.  and Gao, M.  and Schulten, K. ",
-   Title="{{S}teered molecular dynamics and mechanical functions of proteins}",
+   Title="{Steered molecular dynamics and mechanical functions of proteins}",
    Journal="Curr. Opin. Struct. Biol.",
    Year="2001",
    Volume="11",
@@ -99,7 +122,7 @@ year = {2008},
 
 @Article{Ludemann,
    Author="Ludemann, S. K.  and Lounnas, V.  and Wade, R. C. ",
-   Title="{{H}ow do substrates enter and products exit the buried active site of cytochrome {P}450cam? 1. {R}andom expulsion molecular dynamics investigation of ligand access channels and mechanisms}",
+   Title="{How do substrates enter and products exit the buried active site of cytochrome P450cam? 1. Random expulsion molecular dynamics investigation of ligand access channels and mechanisms}",
    Journal="J. Mol. Biol.",
    Year="2000",
    Volume="303",
@@ -117,6 +140,23 @@ year = {2008},
   ISBN = {3642375820}
 }
 
+@article{LindowBH11,
+  added-at = {2011-11-07T00:00:00.000+0100},
+  author = {Lindow, Norbert and Baum, Daniel and Hege, Hans-Christian},
+  biburl = {http://www.bibsonomy.org/bibtex/2472974dcb1d016425a5e6cd20bbbeb26/dblp},
+  ee = {http://doi.ieeecomputersociety.org/10.1109/TVCG.2011.259},
+  interhash = {d5755e4cd94b37cf88517f9a12213617},
+  intrahash = {472974dcb1d016425a5e6cd20bbbeb26},
+  journal = {IEEE Trans. Vis. Comput. Graph.},
+  keywords = {dblp},
+  number = 12,
+  pages = {2025-2034},
+  timestamp = {2011-11-07T00:00:00.000+0100},
+  title = {Voronoi-Based Extraction and Visualization of Molecular Paths.},
+  volume = 17,
+  year = 2011
+}
+
 @article{Kozlikova2014,
     author = {Kozlikova, Barbora and Sebestova, Eva and Sustr, Vilem and Brezovsky, Jan and Strnad, Ondrej and Daniel, Lukas and Bednar, David and Pavelka, Antonin and Manak, Martin and Bezdeka, Martin and Benes, Petr and Kotry, Matus and Gora, Artur and Damborsky, Jiri and Sochor, Jiri},
     issn = {1460-2059},
@@ -124,9 +164,64 @@ year = {2008},
     number = {18},
     pages = {2684--2685},
     publisher = {Oxford University Press},
-    title = {{CAVER Analyst 1.0: graphic tool for interactive visualization and analysis of tunnels and channels in protein structures}},
+    title = {CAVER Analyst 1.0: graphic tool for interactive visualization and analysis of tunnels and channels in protein structures},
     volume = {30},
     year = {2014}
+}
+
+@inproceedings{kozlikova2014vcbm,
+  author    = {Barbora Kozl{\'{\i}}kov{\'{a}} and
+               Adam Jurcik and
+               Jan Byska and
+               Ondrej Strnad and
+               Jiri Sochor},
+  title     = {Visualizing Movements of Protein Tunnels in Molecular Dynamics Simulations},
+  booktitle = {Eurographics Workshop on Visual Computing for Biology and Medicine,
+               {VCBM} 2014, Vienna, Austria, 2014. Proceedings},
+  pages     = {97--106},
+  year      = {2014},
+  crossref  = {DBLP:conf/vcbm/2014},
+  url       = {http://dx.doi.org/10.2312/vcbm.20141188},
+  doi       = {10.2312/vcbm.20141188},
+  timestamp = {Thu, 03 Dec 2015 16:23:40 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/vcbm/KozlikovaJBSS14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
+@article {krone2013features,
+author = {Krone, M. and Reina, G. and Schulz, C. and Kulschewski, T. and Pleiss, J. and Ertl, T.},
+title = {Interactive Extraction and Tracking of Biomolecular Surface Features},
+journal = {Computer Graphics Forum},
+volume = {32},
+number = {3pt3},
+publisher = {Blackwell Publishing Ltd},
+issn = {1467-8659},
+url = {http://dx.doi.org/10.1111/cgf.12120},
+doi = {10.1111/cgf.12120},
+pages = {331--340},
+year = {2013},
+}
+
+@ARTICLE{byska2016, 
+author={Byska, J. and Le Muzic, M. and Gr\"{o}ller, M.E. and Viola, I. and Kozlikova, B.}, 
+journal={Visualization and Computer Graphics, IEEE Transactions on}, 
+title={AnimoAminoMiner: Exploration of Protein Tunnels and their Properties in Molecular Dynamics}, 
+year={2016}, 
+volume={22}, 
+number={1}, 
+pages={747-756},  
+doi={10.1109/TVCG.2015.2467434}, 
+ISSN={1077-2626}, 
+}
+
+@INPROCEEDINGS{phillips2010, 
+author={Phillips, M. and Georgiev, I. and Dehof, A.K. and Nickels, S. and Marsalek, L. and Lenhof, H.-P. and Hildebrandt, A. and Slusallek, P.}, 
+booktitle={Parallel Distributed Processing, Workshops and Phd Forum (IPDPSW), 2010 IEEE International Symposium on}, 
+title={Measuring properties of molecular surfaces using ray casting}, 
+year={2010}, 
+pages={1-7}, 
+month={April},
 }
 
 @article {Luboschik2012,
