one reference added

--- a/refs.bib
+++ b/refs.bib
@@ -180,7 +180,6 @@ year = {2008}
                {VCBM} 2014, Vienna, Austria, 2014. Proceedings},
   pages     = {97--106},
   year      = {2014},
-  crossref  = {DBLP:conf/vcbm/2014},
   url       = {http://dx.doi.org/10.2312/vcbm.20141188},
   doi       = {10.2312/vcbm.20141188},
   timestamp = {Thu, 03 Dec 2015 16:23:40 +0100},
@@ -269,3 +268,23 @@ month={April},
     volume = {6},
     year = {1977}
 }
+
+@article{Dodge2008,
+ author = {Dodge, Somayeh and Weibel, Robert and Lautensch\"{u}tz, Anna-Katharina},
+ title = {Towards a Taxonomy of Movement Patterns},
+ journal = {Information Visualization},
+ issue_date = {June 2008},
+ volume = {7},
+ number = {3},
+ month = jun,
+ year = {2008},
+ issn = {1473-8716},
+ pages = {240--252},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1057/palgrave.ivs.9500182},
+ doi = {10.1057/palgrave.ivs.9500182},
+ acmid = {1594716},
+ publisher = {Palgrave Macmillan},
+ keywords = {behavior, movement pattern, moving object, spatio-temporal data mining, taxonomy, visual analytics},
+} 
+
