--- a/refs.bib
+++ b/refs.bib
@@ -269,6 +269,21 @@ month={April},
     year = {1977}
 }
 
+@inproceedings{shneiderman1996,
+ author = {Shneiderman, Ben},
+ title = {The Eyes Have It: A Task by Data Type Taxonomy for Information Visualizations},
+ booktitle = {Proceedings of the 1996 IEEE Symposium on Visual Languages},
+ series = {VL '96},
+ year = {1996},
+ isbn = {0-8186-7508-X},
+ pages = {336--},
+ url = {http://dl.acm.org/citation.cfm?id=832277.834354},
+ acmid = {834354},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {visualization, information visualization, graphical user interfaces},
+} 
+
 @article{Dodge2008,
  author = {Dodge, Somayeh and Weibel, Robert and Lautensch\"{u}tz, Anna-Katharina},
  title = {Towards a Taxonomy of Movement Patterns},
