teaser to second page

--- a/eurovis_paper.tex
+++ b/eurovis_paper.tex
@@ -38,6 +38,9 @@
 \ifpdf \usepackage[pdftex]{graphicx} \pdfcompresslevel=9
 \else \usepackage[dvips]{graphicx} \fi
 
+\usepackage{lipsum}% http://ctan.org/pkg/lipsum
+\usepackage{multicol}% http://ctan.org/pkg/multicols
+
 \PrintedOrElectronic
 
 % prepare for electronic version of your document
