--- a/refs.bib
+++ b/refs.bib
@@ -5,7 +5,6 @@ author = {Bidmon, Katrin and Grottel, Sebastian and Bös, Fabian and Pleiss, Jü
 year = {2008},
 publisher = {The Eurographics Association and Blackwell Publishing Ltd.},
 ISSN = {1467-8659},
-DOI = {10.1111/j.1467-8659.2008.01227.x}
 }
 
 @article{lampe2011,
@@ -28,7 +27,6 @@ author = {Turkay, Cagatay and Parulek, J. and Reuter, N. and Hauser, Helwig},
 year = {2011},
 publisher = {The Eurographics Association and Blackwell Publishing Ltd.},
 ISSN = {1467-8659},
-DOI = {10.1111/j.1467-8659.2011.01920.x}
 }
 
 @article {Koudelakova2013,
@@ -49,7 +47,7 @@ year = {2013},
   journal = {PLoS Computational Biology},
   keywords = {dblp},
   number = 10,
-  title = {CAVER 3.0: A Tool for the Analysis of Transport Pathways in Dynamic Protein Structures.},
+  title = {{CAVER} 3.0: A Tool for the Analysis of Transport Pathways in Dynamic Protein Structures.},
   volume = 8,
   year = 2012,
 }
@@ -59,14 +57,14 @@ year={2013},
 journal={Journal of Cheminformatics},
 volume={5},
 number={1},
-title={MOLE 2.0: advanced approach for analysis of biomacromolecular channels},
+title={{MOLE} 2.0: advanced approach for analysis of biomacromolecular channels},
 publisher={BioMed Central},
 author={Sehnal, David and Svobodova Varekova, Radka and Berka, Karel and Pravda, Lukas and Navratilova, Veronika and Banas, Pavel and Ionescu, Crina-Maria and Otyepka, Michal and Koca, Jaroslav},
 }
 
 @article {Yaffe2008,
 author = {Yaffe, Eitan and Fishelovitch, Dan and Wolfson, Haim J. and Halperin, Dan and Nussinov, Ruth},
-title = {MolAxis: Efficient and accurate identification of channels in macromolecules},
+title = {{MolAxis}: Efficient and accurate identification of channels in macromolecules},
 journal = {Proteins: Structure, Function, and Bioinformatics},
 volume = {73},
 number = {1},
@@ -83,7 +81,6 @@ year = {2008}
  number = {Suppl 19},
  pages = {S4},
  url = {http://www.biomedcentral.com/1471-2105/14/S19/S4},
- doi = {10.1186/1471-2105-14-S19-S4},
  issn = {1471-2105},
  month = {Nov.},
  year={2013}
@@ -100,8 +97,8 @@ year = {2008}
 
 @Article{Devaurs,
    Author={Devaurs, D.  and Bouard, L.  and Vaisset, M.  and Zanon, C.  and Al-Bluwi, I.  and Iehl, R.  and Simeon, T.  and Cortes, J. },
-   Title={MoMA-LigPath: a web server to simulate protein-ligand unbinding},
-   Journal={Nucleic Acids Res.},
+   Title={{MoMA-LigPath}: a web server to simulate protein-ligand unbinding},
+   Journal={Nucleic Acids Research},
    Year="2013",
    Volume="41",
    Number="Web Server issue",
@@ -112,7 +109,7 @@ year = {2008}
 @Article{Isralewitz,
    Author="Isralewitz, B.  and Gao, M.  and Schulten, K. ",
    Title="{Steered molecular dynamics and mechanical functions of proteins}",
-   Journal="Curr. Opin. Struct. Biol.",
+   Journal="Current Opinion in Structural Biology",
    Year="2001",
    Volume="11",
    Number="2",
@@ -122,8 +119,8 @@ year = {2008}
 
 @Article{Ludemann,
    Author="Ludemann, S. K.  and Lounnas, V.  and Wade, R. C. ",
-   Title="{How do substrates enter and products exit the buried active site of cytochrome P450cam? 1. Random expulsion molecular dynamics investigation of ligand access channels and mechanisms}",
-   Journal="J. Mol. Biol.",
+   Title="{How do substrates enter and products exit the buried active site of cytochrome {P450cam? 1.} Random expulsion molecular dynamics investigation of ligand access channels and mechanisms}",
+   Journal="Journal of Molecular Biology",
    Year="2000",
    Volume="303",
    Number="5",
@@ -147,7 +144,7 @@ year = {2008}
   ee = {http://doi.ieeecomputersociety.org/10.1109/TVCG.2011.259},
   interhash = {d5755e4cd94b37cf88517f9a12213617},
   intrahash = {472974dcb1d016425a5e6cd20bbbeb26},
-  journal = {IEEE Trans. Vis. Comput. Graph.},
+  journal = {IEEE Transactions on Visualization and Computer Graphics},
   keywords = {dblp},
   number = 12,
   pages = {2025-2034},
@@ -164,13 +161,13 @@ year = {2008}
     number = {18},
     pages = {2684--2685},
     publisher = {Oxford University Press},
-    title = {CAVER Analyst 1.0: graphic tool for interactive visualization and analysis of tunnels and channels in protein structures},
+    title = {{CAVER Analyst 1.0}: graphic tool for interactive visualization and analysis of tunnels and channels in protein structures},
     volume = {30},
     year = {2014}
 }
 
 @inproceedings{kozlikova2014vcbm,
-  author    = {Barbora Kozl{\'{\i}}kov{\'{a}} and
+  author    = {Barbora Kozlikova and
                Adam Jurcik and
                Jan Byska and
                Ondrej Strnad and
@@ -181,7 +178,6 @@ year = {2008}
   pages     = {97--106},
   year      = {2014},
   url       = {http://dx.doi.org/10.2312/vcbm.20141188},
-  doi       = {10.2312/vcbm.20141188},
   timestamp = {Thu, 03 Dec 2015 16:23:40 +0100},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/vcbm/KozlikovaJBSS14},
   bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -197,20 +193,18 @@ number = {3pt3},
 publisher = {Blackwell Publishing Ltd},
 issn = {1467-8659},
 url = {http://dx.doi.org/10.1111/cgf.12120},
-doi = {10.1111/cgf.12120},
 pages = {331--340},
 year = {2013},
 }
 
 @ARTICLE{byska2016, 
-author={Byska, J. and Le Muzic, M. and Gr\"{o}ller, M.E. and Viola, I. and Kozlikova, B.}, 
+author={Byska, J. and Le Muzic, M. and Groeller, M.E. and Viola, I. and Kozlikova, B.}, 
 journal={Visualization and Computer Graphics, IEEE Transactions on}, 
-title={AnimoAminoMiner: Exploration of Protein Tunnels and their Properties in Molecular Dynamics}, 
+title={{AnimoAminoMiner}: Exploration of Protein Tunnels and their Properties in Molecular Dynamics}, 
 year={2016}, 
 volume={22}, 
 number={1}, 
 pages={747-756},  
-doi={10.1109/TVCG.2015.2467434}, 
 ISSN={1077-2626}, 
 }
 
@@ -245,8 +239,8 @@ month={April},
 
 @article{Vrotsou2015,
   author    = {Vrotsou, Katerina and Janetzko, Halldor and Navarra, Carlo and Fuchs, Georg and Spretke, David  and Mansmann, Florian and Andrienko, Natalia and Andrienko, Gennady},
-  title     = {SimpliFly: {A} Methodology for Simplification and Thematic Enhancement of Trajectories},
-  journal   = {{IEEE} Trans. Vis. Comput. Graph.},
+  title     = {{SimpliFly}: {A} Methodology for Simplification and Thematic Enhancement of Trajectories},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
   volume    = {21},
   number    = {1},
   pages     = {107--121},
@@ -297,7 +291,6 @@ month={April},
  pages = {240--252},
  numpages = {13},
  url = {http://dx.doi.org/10.1057/palgrave.ivs.9500182},
- doi = {10.1057/palgrave.ivs.9500182},
  acmid = {1594716},
  publisher = {Palgrave Macmillan},
  keywords = {behavior, movement pattern, moving object, spatio-temporal data mining, taxonomy, visual analytics},
