Updated Algorithm 2 and added body of Algorithm 1

--- a/BioVis/BioVis_BMC_template/parts/simplification.tex
+++ b/BioVis/BioVis_BMC_template/parts/simplification.tex
@@ -2,10 +2,25 @@ Including mathematical model.
 
 \begin{algorithm}
   \begin{algorithmic}[1]
-	  \Require $T$ --- trajectory, $I$ --- interval
+	  \Require $T$ --- trajectory, $S$ --- simplification
 	  \Ensure $T$ --- simplified trajectory
-		\Procedure{Simplify}{$T, I$}
-			\State \Return $T$ \Comment{Tohle bude zajimave popsat bo je to docela slozite}
+		\Procedure{Simplify}{$T, S$}
+			\State $S' \gets$ \Call{CacheLoad}{$ $} \Comment{$S'$ --- previous simplification}
+			\State
+			\If{\Call{IsDiffIncremental}{$S, S'$}}
+			  \State $\Delta I \gets$ \Call{Diff}{$S, S'$}
+				\State $T \gets$ \Call{SavitzkyGolay}{$T, \Delta I$}
+			\Else %\Comment{compute from scratch}
+			  \State $\mathcal{L} \gets$ \Call{ByLevels}{$S$} \Comment{$\mathcal{L}$ --- sets of complex intervals}
+				\ForAll {$L \in \mathcal{L}$} \Comment{in asc. order by $level(L)$}
+				  \ForAll {$I \in L$}
+					  \State $T \gets$ \Call{SavitzkyGolay}{$T, I$}
+					\EndFor
+				\EndFor
+			\EndIf
+			\State
+			\State \Call{CacheSave}{$S$}
+			\State \Return $T$
 		\EndProcedure
   \end{algorithmic}
 	\caption{Trajectory simplification}
@@ -17,21 +32,23 @@ Including mathematical model.
 	  \Require $T$ --- trajectory, $\nu$ --- complexity neighborhood, $\tau$ --- complexity threshold, $\epsilon$ --- improvement threshold
 	  \Ensure $T$ --- simplified trajectory
 		\Procedure{AutoSimplify}{$T, \nu, \tau, \epsilon$}
+			\State $C \gets$ \Call{Interval}{$T$} \Comment{$C$ --- complex intervals}
+			\State $c(x) \gets$ \Call{Complexity}{$T, \nu$}
+			\State
 			\Repeat
-        \State $c(x) \gets$ \Call{ComputeComplexity}{$T, \nu$}
-			  \State $I \gets$ \Call{FindComplexInterval}{$c, \tau$}
+			  \State $S \gets$ \Call{FindSimpleIntervals}{$c, \tau$}
+				\State $C \gets$ \Call{RemoveSimpleIntervals}{$C, S$}
 			  \State
-				\State $\Delta c \gets 0$
-			  \If{$I \neq \emptyset$}
-				  \State $T \gets$ \Call{Simplify}{$T, I$}
-				  \State
-					\State $c'(x) \gets c(x)$ \Comment{$c'(x)$ --- previous complexity}
-				  \State $c(x) \gets$ \Call{ComputeComplexity}{$T, \nu$}
-					\State
-					\State $\Delta c \gets \sum_{x \in s(T)}{max(c(x) - c'(x), 0)}$
-					\State \Comment{$s(T)$ --- snapshots of $T$}
-			  \EndIf
-			\Until{$\Delta c > \epsilon$ \Or $I = \emptyset$}
+			  \ForAll{$I \in C$} %\Comment{$I$ --- complex interval}
+					\State $T \gets$ \Call{Simplify}{$T, I$}
+			  \EndFor
+				\State
+				\State $c'(x) \gets c(x)$ %\Comment{$c'(x)$ --- previous complexity}
+				\State $c(x) \gets$ \Call{Complexity}{$T, \nu$}
+				\State
+				\State $\Delta c \gets \sum_{x \in T}{max(c(x) - c'(x), 0)}$
+				\State \Comment{$\Delta c$ --- improvement}
+			\Until{$\Delta c < \epsilon$}
 			\State
 			\State \Return $T$
 		\EndProcedure
