Coppied Intro and Related work from previous article.

--- a/BioVis/BioVis_BMC_template/bmc_article.bib
+++ b/BioVis/BioVis_BMC_template/bmc_article.bib
@@ -7,4 +7,250 @@
   title = {The Human Genome Browser at UCSC},
   pages = {996-1006}
 }
-  
+
+@article {Koudelakova2013,
+author = {Koudelakova, Tana and Chaloupkova, Radka and Brezovsky, Jan and Prokop, Zbynek and Sebestova, Eva 
+and Hesseler, Martin and Khabiri, Morteza and Plevaka, Maryia and Kulik, Daryna and Kuta Smatanova, Ivana 
+and Rezacova, Pavlina and Ettrich, Rudiger and Bornscheuer, Uwe T. and Damborsky, Jiri},
+title = {Engineering Enzyme Stability and Resistance to an Organic Cosolvent by Modification of Residues in the Access Tunnel},
+journal = {Angewandte Chemie International Edition},
+volume = {52},
+number = {7},
+publisher = {WILEY-VCH Verlag},
+issn = {1521-3773},
+year = {2013},
+}
+
+@article{Chovancova2012,
+  author = {Chovancova, Eva and Pavelka, Antonin and Benes, Petr and Strnad, Ondrej and Brezovsky, Jan and Kozlikova, Barbora and Gora, Artur and Sustr, Vilem and Klvana, Martin and Medek, Petr and Biedermannova, Lada and Sochor, Jiri and Damborsky, Jiri},
+  journal = {PLoS Computational Biology},
+  keywords = {dblp},
+  number = 10,
+  title = {{CAVER} 3.0: A Tool for the Analysis of Transport Pathways in Dynamic Protein Structures.},
+  volume = 8,
+  year = 2012,
+}
+
+@article{Sehnal2013,
+year={2013},
+journal={Journal of Cheminformatics},
+volume={5},
+number={1},
+title={{MOLE} 2.0: advanced approach for analysis of biomacromolecular channels},
+publisher={BioMed Central},
+author={Sehnal, David and Svobodova Varekova, Radka and Berka, Karel and Pravda, Lukas and Navratilova, Veronika and Banas, Pavel and Ionescu, Crina-Maria and Otyepka, Michal and Koca, Jaroslav},
+}
+
+@article {Yaffe2008,
+author = {Yaffe, Eitan and Fishelovitch, Dan and Wolfson, Haim J. and Halperin, Dan and Nussinov, Ruth},
+title = {{MolAxis}: Efficient and accurate identification of channels in macromolecules},
+journal = {Proteins: Structure, Function, and Bioinformatics},
+volume = {73},
+number = {1},
+publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+issn = {1097-0134},
+year = {2008}
+}
+
+@Article{Devaurs,
+   Author={Devaurs, D.  and Bouard, L.  and Vaisset, M.  and Zanon, C.  and Al-Bluwi, I.  and Iehl, R.  and Simeon, T.  and Cortes, J. },
+   Title={{MoMA-LigPath}: a web server to simulate protein-ligand unbinding},
+   Journal={Nucleic Acids Research},
+   Year="2013",
+   Volume="41",
+   Number="Web Server issue",
+   Pages="297--302",
+   Month="Jul"
+}
+
+@Article{Isralewitz,
+   Author="Isralewitz, B.  and Gao, M.  and Schulten, K. ",
+   Title="{Steered molecular dynamics and mechanical functions of proteins}",
+   Journal="Current Opinion in Structural Biology",
+   Year="2001",
+   Volume="11",
+   Number="2",
+   Pages="224--230",
+   Month="Apr"
+}
+
+@Article{Ludemann,
+   Author="Ludemann, S. K.  and Lounnas, V.  and Wade, R. C. ",
+   Title="{How do substrates enter and products exit the buried active site of cytochrome {P450cam? 1.} Random expulsion molecular dynamics investigation of ligand access channels and mechanisms}",
+   Journal="Journal of Molecular Biology",
+   Year="2000",
+   Volume="303",
+   Number="5",
+   Pages="797--811",
+   Month="Nov"
+}
+
+@article{Vrotsou2015,
+  author    = {Vrotsou, Katerina and Janetzko, Halldor and Navarra, Carlo and Fuchs, Georg and Spretke, David  and Mansmann, Florian and Andrienko, Natalia and Andrienko, Gennady},
+  title     = {{SimpliFly}: {A} Methodology for Simplification and Thematic Enhancement of Trajectories},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  volume    = {21},
+  number    = {1},
+  pages     = {107--121},
+  year      = {2015},
+  url       = {http://dx.doi.org/10.1109/TVCG.2014.2337333},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/tvcg/VrotsouJNFSMAA15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{Dodge2008,
+ author = {Dodge, Somayeh and Weibel, Robert and Lautensch\"{u}tz, Anna-Katharina},
+ title = {Towards a Taxonomy of Movement Patterns},
+ journal = {Information Visualization},
+ issue_date = {June 2008},
+ volume = {7},
+ number = {3},
+ month = jun,
+ year = {2008},
+ issn = {1473-8716},
+ pages = {240--252},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1057/palgrave.ivs.9500182},
+ acmid = {1594716},
+ publisher = {Palgrave Macmillan},
+ keywords = {behavior, movement pattern, moving object, spatio-temporal data mining, taxonomy, visual analytics},
+} 
+
+@book{andrienko2013,
+  Author = {Andrienko, Gennady and Andrienko, Natalia and Bak, Peter and Keim, Daniel and Wrobel, Stefan},
+  Title = {Visual Analytics of Movement},
+  Publisher = {Springer},
+	address = {Heidelberg},
+  Year = {2013},
+  ISBN = {3642375820}
+}
+
+@article {bidmon2008,
+journal = {Computer Graphics Forum},
+title = {{Visual Abstractions of Solvent Pathlines near Protein Cavities}},
+author = {Bidmon, Katrin and Grottel, Sebastian and Bös, Fabian and Pleiss, Jürgen and Ertl, Thomas},
+year = {2008},
+publisher = {The Eurographics Association and Blackwell Publishing Ltd.},
+ISSN = {1467-8659},
+}
+
+@article {Luboschik2012,
+	title = {Heterogeneity-based guidance for exploring multiscale data in Systems Biology},
+	journal = {Proceedings of the IEEE Symposium on Biological Data Visualization (BioVis{\textquoteright}12)},
+	year = {2012},
+	address = {Seattle, USA},
+	keywords = {[Project Phase 2] Developing new visual analysis methods to be integrated into simulation processes focusing on the exploration of cell biological systems in space and time},
+	author = {M. Luboschik and C. Maus and H.-J. Schulz and H. Schumann and A. Uhrmacher},
+}
+
+@article{Lindow2013,
+  author = {Lindow, Norbert and Baum, Daniel and Bondar, Ana-Nicoleta and Hege, Hans-Christian},
+  journal = {BMC Bioinformatics},
+  keywords = {dblp},
+  number = {S-19},
+  pages = {S5},
+  title = {Exploring cavity dynamics in biomolecular systems.},
+  volume = 14,
+  year = 2013
+}
+
+@ARTICLE{parulek2013, 
+ author={Julius Parulek and Cagatay Turkay and Nathalie Reuter and Ivan Viola}, 
+ journal={BMC Bioinformatics}, 
+ title={Visual cavity analysis in molecular simulations}, 
+ volume = {14},
+ number = {Suppl 19},
+ pages = {S4},
+ url = {http://www.biomedcentral.com/1471-2105/14/S19/S4},
+ issn = {1471-2105},
+ month = {Nov.},
+ year={2013}
+}
+
+@inproceedings{parulek2012,
+  title={Implicit surfaces for interactive graph based cavity analysis of molecular simulations},
+  author={Parulek, Julius and Turkay, Cagatay and Reuter, Nathalie and Viola, Ivan},
+  booktitle={Biological Data Visualization (BioVis), 2012 IEEE Symposium on},
+  pages={115--122},
+  year={2012},
+  organization={IEEE}
+}
+
+@article{LindowBH11,
+  added-at = {2011-11-07T00:00:00.000+0100},
+  author = {Lindow, Norbert and Baum, Daniel and Hege, Hans-Christian},
+  biburl = {http://www.bibsonomy.org/bibtex/2472974dcb1d016425a5e6cd20bbbeb26/dblp},
+  ee = {http://doi.ieeecomputersociety.org/10.1109/TVCG.2011.259},
+  interhash = {d5755e4cd94b37cf88517f9a12213617},
+  intrahash = {472974dcb1d016425a5e6cd20bbbeb26},
+  journal = {IEEE Transactions on Visualization and Computer Graphics},
+  keywords = {dblp},
+  number = 12,
+  pages = {2025-2034},
+  timestamp = {2011-11-07T00:00:00.000+0100},
+  title = {Voronoi-Based Extraction and Visualization of Molecular Paths.},
+  volume = 17,
+  year = 2011
+}
+
+@article {krone2013features,
+author = {Krone, M. and Reina, G. and Schulz, C. and Kulschewski, T. and Pleiss, J. and Ertl, T.},
+title = {Interactive Extraction and Tracking of Biomolecular Surface Features},
+journal = {Computer Graphics Forum},
+volume = {32},
+number = {3pt3},
+publisher = {Blackwell Publishing Ltd},
+issn = {1467-8659},
+url = {http://dx.doi.org/10.1111/cgf.12120},
+pages = {331--340},
+year = {2013},
+}
+
+@INPROCEEDINGS{phillips2010, 
+author={Phillips, M. and Georgiev, I. and Dehof, A.K. and Nickels, S. and Marsalek, L. and Lenhof, H.-P. and Hildebrandt, A. and Slusallek, P.}, 
+booktitle={Parallel Distributed Processing, Workshops and Phd Forum (IPDPSW), 2010 IEEE International Symposium on}, 
+title={Measuring properties of molecular surfaces using ray casting}, 
+year={2010}, 
+pages={1-7}, 
+month={April},
+}
+
+@ARTICLE{byska2016, 
+author={Byska, J. and Le Muzic, M. and Groeller, M.E. and Viola, I. and Kozlikova, B.}, 
+journal={Visualization and Computer Graphics, IEEE Transactions on}, 
+title={{AnimoAminoMiner}: Exploration of Protein Tunnels and their Properties in Molecular Dynamics}, 
+year={2016}, 
+volume={22}, 
+number={1}, 
+pages={747-756},  
+ISSN={1077-2626}, 
+}
+
+@inproceedings{kozlikova2014vcbm,
+  author    = {Barbora Kozlikova and
+               Adam Jurcik and
+               Jan Byska and
+               Ondrej Strnad and
+               Jiri Sochor},
+  title     = {Visualizing Movements of Protein Tunnels in Molecular Dynamics Simulations},
+  booktitle = {Eurographics Workshop on Visual Computing for Biology and Medicine,
+               {VCBM} 2014, Vienna, Austria, 2014. Proceedings},
+  pages     = {97--106},
+  year      = {2014},
+  url       = {http://dx.doi.org/10.2312/vcbm.20141188},
+  timestamp = {Thu, 03 Dec 2015 16:23:40 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/vcbm/KozlikovaJBSS14},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{Kozlikova2014,
+    author = {Kozlikova, Barbora and Sebestova, Eva and Sustr, Vilem and Brezovsky, Jan and Strnad, Ondrej and Daniel, Lukas and Bednar, David and Pavelka, Antonin and Manak, Martin and Bezdeka, Martin and Benes, Petr and Kotry, Matus and Gora, Artur and Damborsky, Jiri and Sochor, Jiri},
+    issn = {1460-2059},
+    journal = {Bioinformatics},
+    number = {18},
+    pages = {2684--2685},
+    publisher = {Oxford University Press},
+    title = {{CAVER Analyst 1.0}: graphic tool for interactive visualization and analysis of tunnels and channels in protein structures},
+    volume = {30},
+    year = {2014}
+}
