--- a/BioVis/BioVis_BMC_template/bmc_article.bib
+++ b/BioVis/BioVis_BMC_template/bmc_article.bib
@@ -254,3 +254,14 @@ ISSN={1077-2626},
     volume = {30},
     year = {2014}
 }
+
+@article{savitzky1964smoothing,
+  title={Smoothing and differentiation of data by simplified least squares procedures.},
+  author={Savitzky, Abraham and Golay, Marcel JE},
+  journal={Analytical chemistry},
+  volume={36},
+  number={8},
+  pages={1627--1639},
+  year={1964},
+  publisher={ACS Publications}
+}
